Fixed embedded test - authentication tests had to be removed.