@@ -91,6 +91,7 @@
 						<artifactId>maven-surefire-plugin</artifactId>
 						<version>${version.surefire.plugin}</version>
 						<configuration>
+							<redirectTestOutputToFile>true</redirectTestOutputToFile>
 							<skip>false</skip>
 						</configuration>
 					</plugin>
@@ -114,15 +115,20 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${version.surefire.plugin}</version>
 						<configuration>
-							<!-- Fork every test because it will launch a separate AS instance -->
-							<forkMode>always</forkMode>
+							<argLine>-XX:MaxPermSize=256m</argLine>
 							<systemPropertyVariables>
 								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 								<jboss.home>${project.build.directory}/wildfly-${version.wildfly}</jboss.home>
 								<module.path>${project.build.directory}/wildfly-${version.wildfly}/modules</module.path>
 							</systemPropertyVariables>
-							<redirectTestOutputToFile>false</redirectTestOutputToFile>
+							<redirectTestOutputToFile>true</redirectTestOutputToFile>
+							<skip>false</skip>
+							<excludes>
+								<exclude>**/resttest/auth/service/*</exclude>
+								<exclude>**/resttest/rest/service/*</exclude>
+							</excludes>
 						</configuration>
 					</plugin>
 					<plugin>
